--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ navigationFragment = "2.6.0"
 navigationUi = "2.6.0"
 legacySupportV4 = "1.0.0"
 activity = "1.8.0"
+colorPicker = "0.0.13"
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -26,6 +27,8 @@ navigation-fragment = { group = "androidx.navigation", name = "navigation-fragme
 navigation-ui = { group = "androidx.navigation", name = "navigation-ui", version.ref = "navigationUi" }
 legacy-support-v4 = { group = "androidx.legacy", name = "legacy-support-v4", version.ref = "legacySupportV4" }
 activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
+color-picker = { group = "com.github.QuadFlask", name = "colorpicker", version.ref = "colorPicker" }
+
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
