--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.TFGAplicacionGastos"
         tools:targetApi="31">
         <activity
-            android:name=".ui.account.createAccount.CreateAccount"
+            android:name=".ui.account.createAccount.CreateAccountFragment"
             android:exported="false" />
         <activity
             android:name=".ui.MainActivity"
