--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,7 @@ navigationUi = "2.8.4"
 legacySupportV4 = "1.0.0"
 activity = "1.9.3"
 colorPicker = "2.3"
+mpAndroidChart = "3.1.0"
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -27,7 +28,9 @@ navigation-fragment = { group = "androidx.navigation", name = "navigation-fragme
 navigation-ui = { group = "androidx.navigation", name = "navigation-ui", version.ref = "navigationUi" }
 legacy-support-v4 = { group = "androidx.legacy", name = "legacy-support-v4", version.ref = "legacySupportV4" }
 activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
-colorPicker = { group = "com.github.Dhaval2404", name = "ColorPicker", version = "2.3" }
+colorPicker = { group = "com.github.Dhaval2404", name = "ColorPicker", version.ref = "colorPicker" }
+mpAndroidChart = { group = "com.github.PhilJay", name = "MPAndroidChart", version.ref = "mpAndroidChart" }
+
 
 
 [plugins]
